# plipbox

./: .editorconfig  .gitignore  .tm_properties  ChangeLog.md  INSTALL  Makefile  README  README.md  version.mk
mcu/src/: CMakeLists.txt  Makefile  board.h  bridge.c  cmd_table.c  cmd_table.h  cmdkey_table.c  cmdkey_table.h  dump.c  dump.h  loop_buf.c  loop_buf.h  main.c  mode_cmd.c  mode_mod.c  mode_mod.h  param.c  param.h  param_def.c  param_def.h  pio.c  pio_dev.h  pio_util.c  pio_util.h  pkt_buf.c  pkt_buf.h  stats.c  types.h
mcu/src/arch/: hw_persist.h  hw_system.h  hw_uart.h
mcu/src/arch/avr/: arch.h  hw_led.h  hw_persist.c  hw_spi.c  hw_spi.h  hw_system.c  hw_timer.h  hw_uart.c
mcu/src/arch/avr/mach-ardunano/: spi_pins.h
mcu/src/arch/common/: crc16.h  hw_spi_common.c  hw_spi_common.h  nopgm.h  proto_low.c
mcu/src/arch/rp2/: arch.h  hw_dev.c  hw_i2c.c  hw_led.c  hw_led.h  hw_persist.c  hw_spi.c  hw_spi.h  hw_system.c  hw_timer.h  hw_uart.c  mem_int.h  pablo.c  strobe.c
mcu/src/base/: cmd.c  cmd.h  debug.h  timer.c  timer.h  uart.c  uartutil.c  uartutil.h  util.h  wire.h
mcu/src/command/: cmd.c  cmd.h  cmdkey_table.c  cmdkey_table.h
mcu/src/eth/: enc28j60.c  enc28j60.h  spi.h
mcu/src/mode/: mode.c  mode.h  mode_cmd.c  mode_def.c  mode_def.h  mode_mod.c  mode_mod.h
mcu/src/mode_mod/: mode_def.c  mode_loop_buf.c  mode_loop_buf.h  mode_nic.c  mode_nic.h
mcu/src/net/: arp.c  arp.h  eth.h  net.h  udp.h
mcu/src/nic/: nic.c  nic.h  nic_def.c  nic_def.h  nic_mod.c  nic_mod.h  nic_test.c  nic_test.h
mcu/src/nic_mod/: enc28j60.c  enc28j60.h  nic_def.c  nic_enc28j60.c  nic_enc28j60.h  nic_loop.c  nic_loop.h
mcu/src/param/: param.c  param.h  param_def.c  param_def.h
mcu/src/proto/: arch.h  proto_atom.h  proto_cmd.c  proto_cmd.h  proto_low.h
mcu/src/proto/avrnetio/: pario_pins.S  pario_pins.h
mcu/src/req/: req.c  req.h
(+457 files in other folders)
